fix white space pre wrap

--- a/src/views/post/post.module.css
+++ b/src/views/post/post.module.css
@@ -17,7 +17,7 @@
   font-size: 13px;
   border: 1px solid var(--dark3);
   word-break: break-word;
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 .media {
@@ -104,7 +104,7 @@
 .replyContent {
   font-size: 13px;
   word-break: break-word;
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 /* add indent to each nested reply */
